--- a/app/app.css
+++ b/app/app.css
@@ -11,13 +11,17 @@ html, body {
 }
 
 .header{
-  height: 10vh;
   border-bottom: 1px solid;
   background-color:  #A8DBA8;
   
   text-align: center;
   font-weight: 800;
   
+}
+
+.header h1{
+  font-size: 3rem;
+  margin: 10px;
 }
 
 .sidebar{
